--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | </title>
+    <title>Sleep Outside |</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
@@ -55,8 +55,7 @@
     </header>
 
     <main class="divider">
-      <section class="product-detail">
-      </section>
+      <section class="product-detail"></section>
     </main>
 
     <footer>&copy;NOT a real business</footer>
