Co-authored-by: Tsosie, Everett <SgtTacos@users.noreply.github.com> Co-authored-by: Daniel Carr <DCPenguin73@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,14 @@
           comfortably at an affordable price.
         </p>
       </section>
-      <section class="products">
-
+      <section class="main-menu">
+        <a href="./product-list/index.html?filter=tents"><div><img src="./public/images/icons/tentIcon.svg" alt="Tents-Icon">Tents</div></a>
+        <a href="./product-list/index.html?filter=backpacks"><div><img src="./public/images/icons/bagIcon.svg" alt="Backpacks-Icon">Backpacks</div></a>
+        <a href="./product-list/index.html?filter=sleeping-bags"><div><img src="./public/images/icons/sleepIcon.svg" alt="Sleeping-Bag-Icon">Sleeping Bags</div></a>
+        <a href="./product-list/index.html?filter=hammocks"><div><img src="./public/images/icons/hamIcon.svg" alt="Hammock-Icon">Hammock</div></a>
       </section>
     </main>
-    <footer id="main-footer" >
+    <footer id="main-footer" >./
 
     </footer>
   </body>
