--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -55,6 +55,7 @@
           </li> -->
         </ul>
       </section>
+      <h3 class="total"></h3>
     </main>
 
     <footer id="main-footer"></footer>
