--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -55,6 +55,9 @@
           </li> -->
         </ul>
       </section>
+      <div>
+        <a href="../checkout/index.html"><button href="">Checkout</button></a>
+      </div>
     </main>
 
     <footer id="main-footer"></footer>
