--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -8,8 +8,8 @@
 
     <title>Sleep Outside | Checkout</title>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="../js/checkout.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script src="../js/checkout.js" type="module" ></script>
   </head>
 
   <body>
@@ -18,8 +18,9 @@
     </header>
 
     <main class="divider">
-      <section class="products">
-        <h2>Review & Place your Order</h2>
+      <section class="checkout-form">
+        
+
       </section>
     </main>
 
