--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <script src="./js/main.js" type="module"></script>
+    <script src="./js/alert.js"></script>
   </head>
   <body>
     <header class="divider" id="main-header">
